--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
         <h1 class="ds">DSA- Data Structures and Algorithms</h1>
     </div>
    </div>
+   <div class="ml0">
+    <div class="ml1">
+        <h1 class="ml">Machine Learning</h1>
+    </div>
+    <div class="ai1">
+        <h1 class="ai">Artificial intelligence</h1>
+    </div>
+   </div>
 </div>
    
 </body>
